append to spritesheet names to fix cache bs

--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -55,9 +55,9 @@
                 this.game.load.image('multiplayer', '{% static 'assets/multiplayer.png' %}');
                 this.game.load.image('select_category', '{% static 'assets/selectacategory.png' %}');
                 this.game.load.image('bar', '{% static 'assets/yellowverticalbar.png' %}');
-                this.game.load.spritesheet('pop_music', '{% static 'assets/popmusic.png' %}', 626, 78);
-                this.game.load.spritesheet('farm', '{% static 'assets/farm.png' %}', 626, 76);
-                this.game.load.spritesheet('wall_street', '{% static 'assets/wallstreet.png' %}', 626, 78);
+                this.game.load.spritesheet('pop_music', '{% static 'assets/popmusic_ss.png' %}', 626, 78);
+                this.game.load.spritesheet('farm', '{% static 'assets/farm_ss.png' %}', 626, 76);
+                this.game.load.spritesheet('wall_street', '{% static 'assets/wallstreet_ss.png' %}', 626, 78);
                 this.game.load.spritesheet('superheroes', '{% static 'assets/superhero.png' %}', 626, 78);
             },
             
