--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -147,9 +147,8 @@
                 var tween_input_box = this.add.tween(input_box);
                 tween_input_box.to({x: 350, y: 905}, 1000, Phaser.Easing.Bounce.Out, false, 600);
 
-                var answer_set = {};
-                var answer_lines = [];
-                var MAX_VISIBLE_ANSWERS = 9;
+                this.answer_set = {}; 
+                this.answer_lines = [];
                 var state = this;
                 tween_input_box.onComplete.add(function () {
                     var input = $('#input');
@@ -158,18 +157,9 @@
                     input.keyup(function (event) {
                         if (event.which === "\r".charCodeAt()) {
                             var val = sanitize(input.val());
-                            if (val.length && !(val in answer_set)) {
-                                var num_answers = Object.keys(answer_set).length;
-                                if (num_answers < MAX_VISIBLE_ANSWERS) {
-                                    answer_lines.push(state.game.add.text(104, 312 + num_answers * 56, val, {font: "50px Bazar"}));
-                                } else {
-                                    for (var i = 0; i < MAX_VISIBLE_ANSWERS - 1; ++i) {
-                                        answer_lines[i].text = answer_lines[i + 1].text;
-                                    }
-                                    answer_lines[MAX_VISIBLE_ANSWERS - 1].text = val;
-                                }
+                            if (val.length && !(val in state.answer_set)) {
+                                state.answer_set[val] = true;
                                 state.test(state.category, val);
-                                answer_set[val] = true;
                                 input.val("");
                             }
                         }
@@ -245,9 +235,22 @@
             },
 
             test: function(category, word){
+                var state = this;
+                var MAX_VISIBLE_ANSWERS = 9;
                 $.getJSON('/score', {'category': category, 'word':word},
                     function(result){
-                        console.log(result['distance']);
+                        var score = 41 - (Math.floor(result['distance']) - 1);
+                        if (score < 1 || score > 40) console.log("Fail");
+
+                        var num_visible_answers = state.answer_lines.length;
+                        if (num_visible_answers < MAX_VISIBLE_ANSWERS) {
+                            state.answer_lines.push(state.game.add.text(104, 312 + num_visible_answers * 56, word, {font: "50px Bazar"}));
+                        } else {
+                            for (var i = 0; i < MAX_VISIBLE_ANSWERS - 1; ++i) {
+                                state.answer_lines[i].text = state.answer_lines[i + 1].text;
+                            }
+                            state.answer_lines[MAX_VISIBLE_ANSWERS - 1].text = val;
+                        }
                     }
                 );
             }
