fix somethign stupid

--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -400,6 +400,6 @@
         game.state.add('category_state', category_state);
         game.state.add('game_state', game_state);
         game.state.add('leaderboard_state', leaderboard_state);
-        game.state.start('leaderboard_state');
+        game.state.start('menu_state');
     </script>
 </html>
