--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -13,6 +13,14 @@
                 src: url("{% static "assets/Bazar.ttf" %}");
             }   
         </style>
+        <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+        <script>
+            WebFont.load({
+                custom: {
+                    families: ['Bazar']
+                }
+            });
+        </script>
         <link rel="stylesheet" type="text/css" href="{% static "css/feud.css" %}"/>
         <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}"/>
 
